--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,6 +1,20 @@
-body {
-  min-height: 1080px;
-  max-height: 1080px;
+.hidden {
+  display: none;
+}
+
+.active-modal {
+  display: block;
+}
+
+* {
   margin: 0;
   padding: 0;
 }
+
+body {
+  background-color: #66A;
+  color: #fff;
+  font-family: sans-serif;
+  text-align: center;
+}
+
