edited subscription message

--- a/app/views/static_pages/_subscribe_modal.html.haml
+++ b/app/views/static_pages/_subscribe_modal.html.haml
@@ -4,10 +4,10 @@
     %b< MyCircle!
   %p.modal-text
     %b MyCircle
-    will help you easily create new connections in the San Francisco Bay Area. It is my mission to not only help you meet like-minded people, but to also help you build a more powerful network by connecting you with those who you look up to and who work for your dream companies. 
+    will help you easily find new connections in the San Francisco Bay Area. It is my mission to not only help you meet like-minded people, but to also help you build a very powerful network by allowing you to connect with those with similar interests, who you look up to, and who work for your dream companies.
   %p.modal-text
     As a token of my gratitude and appreciation, please feel free to e-mail me at
-    <a href="mailto:jpbullalayao@gmail.com?Subject=[MyCircle]%20Hello!" target="_top">jpbullalayao@gmail.com</a>, because I would love to learn about you over coffee, and be in your circle!
+    <a href="mailto:jpbullalayao@gmail.com?Subject=[MyCircle]%20Hello!" target="_top">jpbullalayao@gmail.com</a>, because I would love to learn more about you over coffee, and be in your circle!
   %p.modal-text
     I'm looking forward to connecting with you, and watch out my first e-mail update on June 6th!
   %p.modal-text
