reorganized files and css, refactored

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 	</head>
 
   <body>
-    <div class="modal-wrapper">
+    <div class="modal-background">
       <%= yield %>
 
 <!--       <footer class="footer">
