refactor done, blog started

--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -9,3 +9,6 @@ $main-color: #66A; // Purple
 $btn-primary-background-color: #333; // Dark Grey
 $btn-primary-background-color-light: lighten($btn-primary-background-color, 15%); // Light Dark Grey
 $btn-color: #FFF; // White
+
+// Containers
+$container-round-border-val: 10px
