--- a/app/assets/stylesheets/components/modals.scss
+++ b/app/assets/stylesheets/components/modals.scss
@@ -5,7 +5,7 @@
 
 .modal {
   background-color: #FFF;
-  border-radius: 10px;
+  border-radius: $container-round-border-val;
   bottom: 0;
   color: #000;
   display: none;
