--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,10 +1,14 @@
 @import 'base/mixins';
 
 @import 'components/buttons';
+@import 'components/containers';
 @import 'components/forms';
 @import 'components/modals';
 
 @import 'styles/alpha_users';
+@import 'styles/blogs';
+@import 'styles/blog_comments';
+@import 'styles/blog_posts';
 @import 'styles/company';
 @import 'styles/messages';
 @import 'styles/static_pages';
